--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Microfluidic Chip Simulation</string>
+   <string>QtMCS</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: white</string>
