--- a/config.ui
+++ b/config.ui
@@ -51,13 +51,27 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="sizeEdit">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
+       <widget class="QComboBox" name="sizeBox">
+        <item>
+         <property name="text">
+          <string>5</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>6</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>7</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>8</string>
+         </property>
+        </item>
        </widget>
       </item>
      </layout>
@@ -93,7 +107,7 @@
         <item>
          <widget class="QCheckBox" name="checkBox_in_0">
           <property name="text">
-           <string>1</string>
+           <string>0</string>
           </property>
           <property name="checkable">
            <bool>true</bool>
@@ -106,49 +120,52 @@
         <item>
          <widget class="QCheckBox" name="checkBox_in_1">
           <property name="text">
-           <string>2</string>
+           <string>1</string>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_in_2">
           <property name="text">
-           <string>3</string>
+           <string>2</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_in_3">
           <property name="text">
-           <string>4</string>
+           <string>3</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_in_4">
           <property name="text">
-           <string>5</string>
+           <string>4</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_in_5">
           <property name="text">
-           <string>6</string>
+           <string>5</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_in_6">
           <property name="text">
-           <string>7</string>
+           <string>6</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_in_7">
           <property name="text">
-           <string>8</string>
+           <string>7</string>
           </property>
          </widget>
         </item>
@@ -183,56 +200,71 @@
         <item>
          <widget class="QCheckBox" name="checkBox_out_0">
           <property name="text">
-           <string>1</string>
+           <string>0</string>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_out_1">
           <property name="text">
-           <string>2</string>
+           <string>1</string>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_out_2">
           <property name="text">
-           <string>3</string>
+           <string>2</string>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_out_3">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <property name="text">
-           <string>4</string>
+           <string>3</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_out_4">
           <property name="text">
-           <string>5</string>
+           <string>4</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_out_5">
           <property name="text">
-           <string>6</string>
+           <string>5</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_out_6">
           <property name="text">
-           <string>7</string>
+           <string>6</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_out_7">
           <property name="text">
-           <string>8</string>
+           <string>7</string>
           </property>
          </widget>
         </item>
