--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -77,6 +77,7 @@
    </attribute>
    <addaction name="actionCreate"/>
    <addaction name="actionRandom"/>
+   <addaction name="actionConfig"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionCreate">
@@ -87,6 +88,11 @@
   <action name="actionRandom">
    <property name="text">
     <string>Random</string>
+   </property>
+  </action>
+  <action name="actionConfig">
+   <property name="text">
+    <string>Config</string>
    </property>
   </action>
  </widget>
